# Overture-Reprise

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/01_math/: test_file.c  test_game.c
examples/02_triangle/: triangle.c
examples/03_multi_window_tris/: multi_win.c
examples/04_index_buffer/: index.c
examples/05_uniform/: uniform.c
include/: macros.h  map.h
include/core/: ecs.h  log.h  serialize_deserialize.h  systems.h
include/overture/: overture.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: entry.c  macros.h
src/core/: ecs.c  ecs.h  log.c  log.h  serialize_deserialize.c  serialize_deserialize.h  systems.c  systems.h
src/graphics/: opengl.c  opengl.h  render_obj.h  vulkan.c  vulkan.h  vulkan_utils.c  vulkan_utils.h
src/platform/: window.c  window.h
test/: test_file.c  test_game.c
